--- a/pytorch_nn_tutorial.ipynb
+++ b/pytorch_nn_tutorial.ipynb
@@ -23,6 +23,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "first we import data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -59,6 +66,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we tensorize the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -85,6 +99,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "next is what is really happening under the hood, but we can use library to skip them later"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -93,8 +114,15 @@
     "import math\n",
     "\n",
     "weights = torch.randn(784,10) / math.sqrt(784) # don't want this step to be included in AD gradient\n",
-    "weights.requires_grad_() # \"_\" means operation is in-place, changes the variable\n",
+    "weights.requires_grad_() # \"_\" means operation is in-place, changes the variable \"weights\" when called\n",
     "bias = torch.zeros(10,requires_grad=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "here we create a simple single-layer affine + log_softmax model"
    ]
   },
   {
@@ -103,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# activation function\n",
+    "# pick an activation function\n",
     "def log_softmax(x):\n",
     "    return x - x.exp().sum(-1).log().unsqueeze(-1)\n",
     "\n",
@@ -126,9 +154,9 @@
     }
    ],
    "source": [
-    "bs = 64\n",
+    "bs = 64 #batch size for minibatch training\n",
     "\n",
-    "xb = x_train[0:bs]\n",
+    "xb = x_train[0:bs] # get one batch of input\n",
     "preds = model(xb)\n",
     "print(preds[0], preds.shape) # each batch has 10 log probabilities for 10 digits"
    ]
@@ -141,7 +169,7 @@
    "source": [
     "# loss function, input are log probabilities and gradient\n",
     "def nll(input, target):\n",
-    "    # we sum up log(prob) corresponds to true label\n",
+    "    # we sum up log(prob) corresponds to true label, the code is concise/clever but hard to read\n",
     "    return -input[range(target.shape[0]),target].mean()\n",
     "\n",
     "loss_func = nll"
@@ -179,7 +207,7 @@
     }
    ],
    "source": [
-    "yb = y_train[0:bs]\n",
+    "yb = y_train[0:bs] # get one batch of labels corresponding to input\n",
     "print(range(yb.shape[0]))\n",
     "preds[range(yb.shape[0]),yb]"
    ]
@@ -203,8 +231,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we can measure prediction accuracy for training or validation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,6 +277,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we start first draft of training, every step is explicitly shown"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -256,7 +298,7 @@
     }
    ],
    "source": [
-    "from IPython.core.debugger import set_trace\n",
+    "from IPython.core.debugger import set_trace # can ignore this, for easy debugging purpose\n",
     "lr = 0.5\n",
     "epochs = 2\n",
     "n = len(x_train) # total sample size\n",
@@ -293,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "using nn.functional to get common loss functions"
+    "We can simplify the code a lot via library. First, we use nn.functional to get common loss functions"
    ]
   },
   {
@@ -307,23 +349,20 @@
     "loss_func = F.cross_entropy\n",
     "\n",
     "def model(xb):\n",
-    "    return xb @ weights + bias"
+    "    return xb @ weights + bias\n",
+    "# notice we only need a single-layer affine model, cross_entropy takes care of the log_softmax activation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'xb' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(loss_func(model(\u001b[43mxb\u001b[49m),yb),accuracy(model(xb),yb))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'xb' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.1133, grad_fn=<NllLossBackward0>) tensor(0.9375)\n"
      ]
     }
    ],
@@ -350,10 +389,10 @@
     "# nn.Module objects are callable ie they are functions, and this will call forward automatically\n",
     "class Mnist_Logistic(nn.Module):\n",
     "    def __init__(self):\n",
-    "        super().__init__() #init the super class nn.Module\n",
+    "        super().__init__() #init the super class nn.Module, so our new class has all the objects associated with the super class\n",
     "        self.weights = nn.Parameter(torch.randn(784,10) / math.sqrt(784))\n",
     "        self.bias = nn.Parameter(torch.zeros(10))\n",
-    "    \n",
+    "    # pass input forward, model is affine so we just apply that\n",
     "    def forward(self,xb):\n",
     "        return xb @ self.weights + self.bias\n",
     "        "
@@ -391,8 +430,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr = 0.5\n",
-    "epochs = 2\n",
+    "lr = 0.5 # learn rate (step size for SGD)\n",
+    "epochs = 2 # how many times do we train over the whole dataset\n",
     "n = len(x_train) # total sample size\n",
     "def fit():\n",
     "    for epoch in range(epochs):\n",
@@ -546,7 +585,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "using Dataset to index data in bulk"
+    "using TensorDataset to index data in bulk"
    ]
   },
   {
@@ -696,14 +735,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "def loss_batch(model,loss_func,xb,yb,opt = None):\n",
     "    loss  = loss_func(model(xb),yb)\n",
     "\n",
-    "    if opt is not None:\n",
+    "    if opt is not None: # this gives two use cases: 1. just compute loss; 2. back propagate and update as well\n",
     "        loss.backward()\n",
     "        opt.step()\n",
     "        opt.zero_grad()\n",
@@ -713,27 +752,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "def fit(epochs,model,loss_func,opt,train_dl,valid_dl):\n",
-    "    for epoch in epochs:\n",
+    "def fit(epochs, model, loss_func, opt, train_dl, valid_dl):\n",
+    "    for epoch in range(epochs):\n",
     "        model.train()\n",
     "        for xb,yb in train_dl:\n",
     "            loss_batch(model,loss_func,xb,yb,opt)\n",
     "        model.eval()\n",
     "        with torch.no_grad():\n",
     "            losses, nums = zip(\n",
-    "                *[loss_batch(model,loss_func,xb,yb) for xb,yb in valid_dl]\n",
+    "                *[loss_batch(model,loss_func,xb,yb) for xb,yb in valid_dl] #no opt input so it only computes loss without update\n",
     "                  )\n",
-    "# The result of the list comprehension is a list of tuples. Each tuple contains two elements: the loss and the batch size.\n",
-    "# The * operator is used to unpack this list of tuples so that zip can process it correctly.\n",
-    "# zip(*[loss_batch(model, loss_func, xb, yb) for xb, yb in valid_dl]) effectively transposes this list of tuples. \n",
-    "# This means that all the first elements (losses) are grouped together, and all the second elements (batch sizes) are grouped together.\n",
-    "            val_loss = np.sum(np.multiply(losses,nums)) / np.sum(nums)\n",
+    "                # The result of the list comprehension is a list of tuples. Each tuple contains two elements: the loss and the batch size.\n",
+    "                # The * operator is used to unpack this list of tuples so that zip can process it correctly.\n",
+    "                # zip(*[loss_batch(model, loss_func, xb, yb) for xb, yb in valid_dl]) effectively transposes this list of tuples. \n",
+    "                # This means that all the first elements (losses) are grouped together, and all the second elements (batch sizes) are grouped together.\n",
+    "            val_loss = np.sum(np.multiply(losses,nums)) / np.sum(nums) # weight losses by batch sizes and normalize, batch size should be 2*bs for most but not for all\n",
     "        print(epoch,val_loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def get_data(train_ds,valid_ds,bs):\n",
+    "    return ( DataLoader(train_ds, batch_size=bs, shuffle=True), \n",
+    "             DataLoader(valid_ds, batch_size=bs*2) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 16)\n",
+      "0 0.33778481835722923\n",
+      "(128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 16)\n",
+      "1 0.30258366194963454\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_dl, valid_dl = get_data(train_ds,valid_ds,bs)\n",
+    "model, opt = get_model()\n",
+    "fit(epochs, model, loss_func, opt, train_dl, valid_dl)"
    ]
   },
   {
@@ -741,9 +814,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
