--- a/pytorch_nn_tutorial.ipynb
+++ b/pytorch_nn_tutorial.ipynb
@@ -545,7 +545,7 @@
     "\n",
     "def get_model():\n",
     "    model = Mnist_Logistic()\n",
-    "    return model, optim.SGD(model.parameters(), lr = lr)\n",
+    "    return model, optim.SGD(model.parameters(), lr = lr) # SGD needs the parameters (weights and bias) and lr to set up\n",
     "\n",
     "model, opt = get_model()"
    ]
@@ -807,6 +807,198 @@
     "train_dl, valid_dl = get_data(train_ds,valid_ds,bs)\n",
     "model, opt = get_model()\n",
     "fit(epochs, model, loss_func, opt, train_dl, valid_dl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "let us try this on a CNN. First we build it the silly/tedious way similar to our previous model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Mnist_CNN(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.conv1 = nn.Conv2d(1, 16, kernel_size=3, stride=2, padding=1)\n",
+    "        self.conv2 = nn.Conv2d(16, 16, kernel_size=3, stride=2, padding=1)\n",
+    "        self.conv3 = nn.Conv2d(16, 10, kernel_size=3, stride=2, padding=1)\n",
+    "\n",
+    "    def forward(self, xb):\n",
+    "        xb = xb.view(-1, 1, 28, 28) # view is reshape in MATLAB, -1 is placeholder inferred from other dims, ???? WHY 4D shape instead of 3D shape TODO\n",
+    "        xb = F.relu(self.conv1(xb))\n",
+    "        xb = F.relu(self.conv2(xb))\n",
+    "        xb = F.relu(self.conv3(xb))\n",
+    "        xb = F.avg_pool2d(xb, 4)\n",
+    "        return xb.view(-1, xb.size(1)) # vectorize the data back\n",
+    "\n",
+    "lr = 0.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0.35788147304058077\n",
+      "1 0.2665121741473675\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Mnist_CNN()\n",
+    "opt = optim.SGD(model.parameters(), lr=lr, momentum=0.9) # momentum for better performance\n",
+    "fit(epochs, model, loss_func, opt, train_dl, valid_dl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It would be easier to build the network sequentially layer by layer. We use nn.Sequential, but we want to setup custom layer that isn't supported by Pytorch. To do that we use a Lambda class:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Lambda(nn.Module):\n",
+    "    def __init__(self, func): # the class Lambda takes a function as input\n",
+    "        super().__init__()\n",
+    "        self.func = func\n",
+    "    def forward(self, x): # usage: self.forward(x) to get func(x) as output\n",
+    "        return self.func(x)\n",
+    "\n",
+    "def preprocess(x):\n",
+    "    return x.view([-1, 1, 28, 28]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0.35822363991737366\n",
+      "1 0.2678955104470253\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = nn.Sequential(\n",
+    "    Lambda(preprocess),  # now we have a \"preprocess\" or \"view\" custom layer to reshape data\n",
+    "    nn.Conv2d(1, 16, kernel_size=3, stride=2, padding=1), # input channels, output channels, kernel is 3x3 pixels (local features) \n",
+    "    nn.ReLU(),\n",
+    "    nn.Conv2d(16, 16, kernel_size=3, stride=2, padding=1), # stride is 2 pixels move per step for convolution, =1 same size output as input, =2 downsampling\n",
+    "    nn.ReLU(),\n",
+    "    nn.Conv2d(16, 10, kernel_size=3, stride=2, padding=1), # pads 1 pixel around image to learn edge features, = (kernel_size - 1) mod 2,  \n",
+    "    nn.ReLU(),\n",
+    "    nn.AvgPool2d(4), # smoothing and dimension reducing over 4x4 kernel\n",
+    "    Lambda(lambda x: x.view(x.size(0),-1)) # vectorize layer, can also do this for preprocess layer using lambda function\n",
+    ")\n",
+    "opt = optim.SGD(model.parameters(), lr = lr, momentum=0.9)\n",
+    "fit(epochs, model, loss_func, opt, train_dl, valid_dl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "generalize the model to work for 2D image of any size, use WrappedDataLoader to reshape into any size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess(x, y):\n",
+    "    return x.view([-1, 1, 28, 28]), y\n",
+    "\n",
+    "class WrappedDataLoader(nn.Module):\n",
+    "    def __init__(self, dl, func):\n",
+    "        super().__init__()\n",
+    "        self.dl = dl\n",
+    "        self.func = func\n",
+    "\n",
+    "    def __len__(self, dl):\n",
+    "        return len(self.dl)\n",
+    "    def __iter__(self):\n",
+    "        for b in self.dl:\n",
+    "            yield self.func(*b) # unpack b which is data and labels\n",
+    "            # yield is used here to make a generator, which is more memory-efficient than a function since the value is returned on the fly and not stored in a big list to return\n",
+    "\n",
+    "train_dl, valid_dl = get_data(train_ds, valid_ds, bs)\n",
+    "train_dl = WrappedDataLoader(train_dl, preprocess)\n",
+    "valid_dl = WrappedDataLoader(valid_dl, preprocess)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0.684314660167694\n",
+      "1 0.5173437547683716\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = nn.Sequential(\n",
+    "    nn.Conv2d(1, 16, kernel_size=3, stride=2, padding=1),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Conv2d(16, 16, kernel_size=3, stride=2, padding=1),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Conv2d(16, 10, kernel_size=3, stride=2, padding=1),\n",
+    "    nn.ReLU(),\n",
+    "    nn.AdaptiveAvgPool2d(1), # adaptive to shape so output size is 1\n",
+    "    Lambda(lambda x: x.view(x.size(0),-1)) # vectorize layer, can also do this for preprocess layer using lambda function    \n",
+    ")\n",
+    "opt = optim.SGD(model.parameters(), lr = lr, momentum=0.9)\n",
+    "fit(epochs, model, loss_func, opt, train_dl, valid_dl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add GPU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.cuda.is_available())"
    ]
   },
   {
