--- a/pytorch_nn_tutorial.ipynb
+++ b/pytorch_nn_tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,15 +141,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-0.0114, -1.0889,  0.3362, -0.2988, -0.1197,  0.3866, -0.1698,  0.1740,\n",
-      "        -0.2700,  0.0557], grad_fn=<SelectBackward0>) torch.Size([64, 10])\n"
+      "tensor([-2.5484, -2.3427, -2.1407, -1.7657, -2.6675, -2.1078, -2.4254, -2.7434,\n",
+      "        -2.4887, -2.2041], grad_fn=<SelectBackward0>) torch.Size([64, 10])\n"
      ]
     }
    ],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -190,18 +190,18 @@
     {
      "data": {
       "text/plain": [
-       "tensor([ 0.3866,  0.2929, -0.1218, -0.4110,  0.0678, -0.0791, -0.3509, -0.5340,\n",
-       "        -0.1950, -0.1714, -0.7215, -0.4490, -0.2642,  0.2579, -0.3288,  0.1833,\n",
-       "        -0.5821,  0.1417,  0.0468,  0.1712, -0.1581,  0.4594,  0.3569, -0.3550,\n",
-       "        -0.7182, -0.0898,  0.0587, -0.9915, -0.1141,  0.1072, -0.3567,  0.0074,\n",
-       "         0.5187,  0.2196,  0.4313,  0.0167,  0.3088,  0.2531, -0.0853,  0.4392,\n",
-       "        -0.4191, -0.1413,  0.2059,  0.1628, -0.1858,  0.1190,  0.3217, -0.0736,\n",
-       "         0.0411, -0.5517, -0.4968,  0.1707,  0.4966, -0.0448,  0.7156,  0.2891,\n",
-       "         0.0485,  0.2960, -0.3112, -0.4308, -0.1295,  0.1457,  0.1581,  0.0211],\n",
+       "tensor([-2.1078, -2.2548, -2.5276, -2.0229, -2.2252, -2.1209, -2.4186, -2.2712,\n",
+       "        -2.5314, -2.5612, -2.1270, -2.2342, -2.0451, -2.0375, -2.4564, -2.3785,\n",
+       "        -1.9116, -2.4607, -2.3018, -2.2024, -2.5667, -2.0223, -2.4537, -2.0826,\n",
+       "        -1.8899, -1.9175, -2.3537, -1.7718, -2.2452, -2.3208, -2.6205, -2.6174,\n",
+       "        -2.1256, -2.0782, -2.6785, -2.6931, -1.9740, -2.3840, -2.2604, -2.1087,\n",
+       "        -2.3586, -2.2124, -2.4355, -2.2794, -2.3290, -2.0717, -1.9455, -2.7669,\n",
+       "        -2.3024, -1.8568, -1.9997, -1.7667, -1.5548, -2.3398, -2.2064, -2.3405,\n",
+       "        -1.7075, -2.2743, -2.3784, -1.9612, -2.5605, -2.3746, -2.3792, -1.6029],\n",
        "       grad_fn=<IndexBackward0>)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,14 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(2.2815, grad_fn=<NegBackward0>)\n"
+      "tensor(2.2245, grad_fn=<NegBackward0>)\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,14 +250,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.0938)\n"
+      "tensor(0.1719)\n"
      ]
     },
     {
@@ -266,7 +266,7 @@
        "50000"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,14 +285,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> \u001b[1;32mc:\\users\\bryan\\appdata\\local\\temp\\ipykernel_10824\\1997184964.py\u001b[0m(8)\u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n",
+      "> \u001b[1;32mc:\\users\\bryan\\appdata\\local\\temp\\ipykernel_21708\\2097258380.py\u001b[0m(8)\u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n",
       "\n"
      ]
     }
@@ -324,9 +324,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.2245, grad_fn=<NegBackward0>) tensor(0.1719)\n"
+     ]
+    }
+   ],
    "source": [
     "print(loss_func(model(xb),yb),accuracy(model(xb),yb))"
    ]
@@ -340,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,14 +363,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.1133, grad_fn=<NllLossBackward0>) tensor(0.9375)\n"
+      "tensor(2.2245, grad_fn=<NllLossBackward0>) tensor(0.1719)\n"
      ]
     }
    ],
@@ -379,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,24 +417,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(2.3838, grad_fn=<NllLossBackward0>)\n"
+      "tensor(2.4407, grad_fn=<NllLossBackward0>)\n"
      ]
     }
    ],
    "source": [
-    "print(loss_func(model(xb),yb))"
+    "print(loss_func(model(xb),yb)) # model directly calls forward with xb as input"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,19 +457,19 @@
     "                    p -= p.grad * lr\n",
     "                model.zero_grad()\n",
     "\n",
-    "fit()"
+    "#fit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.2257, grad_fn=<NllLossBackward0>)\n"
+      "tensor(2.4407, grad_fn=<NllLossBackward0>)\n"
      ]
     }
    ],
@@ -478,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,14 +502,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(2.3091, grad_fn=<NllLossBackward0>)\n"
+      "tensor(2.2997, grad_fn=<NllLossBackward0>)\n"
      ]
     }
    ],
@@ -512,14 +520,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.2281, grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.2295, grad_fn=<NllLossBackward0>)\n"
      ]
     }
    ],
@@ -537,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +567,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.0653, grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.0805, grad_fn=<NllLossBackward0>)\n"
      ]
     }
    ],
@@ -590,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,14 +609,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.0598, grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.0649, grad_fn=<NllLossBackward0>)\n"
      ]
     }
    ],
@@ -638,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,14 +657,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.0570, grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.0595, grad_fn=<NllLossBackward0>)\n"
      ]
     }
    ],
@@ -683,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,15 +703,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 tensor(0.3538)\n",
-      "1 tensor(0.2746)\n"
+      "0 tensor(0.3198)\n",
+      "1 tensor(0.4444)\n"
      ]
     }
    ],
@@ -735,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,17 +797,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 16)\n",
-      "0 0.33778481835722923\n",
-      "(128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 16)\n",
-      "1 0.30258366194963454\n"
+      "0 0.33498039371967314\n",
+      "1 0.3533739457130432\n"
      ]
     }
    ],
@@ -818,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,15 +848,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.35788147304058077\n",
-      "1 0.2665121741473675\n"
+      "0 0.4543928606033325\n",
+      "1 0.23208876793384553\n"
      ]
     }
    ],
@@ -869,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,15 +892,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.35822363991737366\n",
-      "1 0.2678955104470253\n"
+      "0 0.3951185884714127\n",
+      "1 0.2185700836777687\n"
      ]
     }
    ],
@@ -923,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,15 +956,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.684314660167694\n",
-      "1 0.5173437547683716\n"
+      "0 0.4104154346227646\n",
+      "1 0.24352723976373672\n"
      ]
     }
    ],
@@ -986,27 +992,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "True\n"
      ]
     }
    ],
    "source": [
     "print(torch.cuda.is_available())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
